# ost_player

./: .gitignore  README.md  clippy_out.txt
ai_docs/: RELEASE_NOTES_2026-04-21.md
app/: Cargo.toml  README.md  build.rs
app/scripts/: verify.ps1  verify.sh
app/src/: command_bus.rs  error.rs  lib.rs  logging.rs  main.rs  paths.rs  persist.rs  state.rs  windows_icon.rs
app/src/audio/: cpal.rs  mod.rs  symphonia.rs
app/src/config/: defaults.rs  io.rs  mod.rs
app/src/hotkeys/: hints.rs  logic.rs  mod.rs
app/src/indexer/: io.rs  mod.rs  model.rs  scan.rs
app/src/player/: mod.rs  queue.rs
app/src/playlists/: io.rs  mod.rs
app/src/tui/: action.rs  app.rs  mod.rs  scan_indicator.rs  state.rs  terminal.rs  ui.rs  widgets.rs
app/src/tui/screens/: main_menu.rs  mod.rs  now_playing.rs  playlists.rs  settings.rs
app/tests/: ost_001_paths_config_errors.rs  ost_002_yaml_persistence.rs  ost_004_indexer.rs  ost_006_hotkeys.rs  ost_007_command_bus.rs  ost_008_state_persistence.rs  ost_009_windows_icon.rs  ost_010_logging_config_rotation_retention.rs  tz_003_scan_depth_yaml_compat.rs  tz_006_volume_ladder_yaml_compat.rs  tz_008_custom_min_size_kb_yaml_compat.rs
tz/: TZ.md  TZ_Bugfix_NowPlaying_Navigation_And_HeaderDuplication.md  TZ_Fixes_Logging_NowPlaying_ScanDepth_TUI_Volume_Playlists_MinSizePerFolder.md  TZ_Fixes_OGG_FFmpeg_RootOnly_Rescan_TextInput.md  TZ_Full_Backlog_2026-04.md  TZ_Full_Backlog_EN_20260421  TZ_OST_Player_Fixes_Ogg_FFmpeg_RootOnly_Rescan_TextInput.md  TZ_OST_Player_TUI_Portable.md  TZ_StatusBar_Volume_MinSizeKB.md  TZ_VolumeHotkeys.md  (+2 more)
(+12 files in other folders)
