[package]
name = "ost_player"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
crossterm = "0.28"
ratatui = "0.28"
rand = "0.8"
rodio = { version = "0.20", features = ["symphonia-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3"
thiserror = "2.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
unicode-segmentation = "1.12"
unicode-width = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3"

